# obs-composite-blur

./: .all-contributorsrc  .gitignore  CMakeLists.txt  README.md  buildspec.json  installer.iss.in  resource.rc.in
.github/: CODEOWNERS  FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: .Wingetfile  Build-Windows.ps1  Package-Windows.ps1
.github/scripts/utils.pwsh/: Check-Git.ps1  Ensure-Location.ps1  Expand-ArchiveExt.ps1  Install-BuildDependencies.ps1  Invoke-External.ps1  Invoke-GitCheckout.ps1  Logger.ps1  Setup-Host.ps1  Setup-Obs.ps1
.github/workflows/: build.yml
cmake/: ObsPluginHelpers.cmake
data/locale/: de-DE.ini  en-US.ini  es-ES.ini  fi-FI.ini  zh-CN.ini
data/shaders/: box_1d.effect  box_radial.effect  box_tiltshift.effect  composite.effect  dual_kawase_down_sample.effect  dual_kawase_up_sample.effect  effect_mask_circle.effect  effect_mask_crop.effect  effect_mask_source.effect  gaussian_1d.effect  gaussian_1d_texture.effect  gaussian_motion.effect  gaussian_motion_texture.effect  gaussian_radial.effect  gaussian_radial_texture.effect  gaussian_vector.effect  gradient_map.effect  mix.effect  noise_fns.effect  pixelate_circle.effect  pixelate_hexagonal.effect  pixelate_rhomboid.effect  pixelate_square.effect  pixelate_triakis.effect  pixelate_triangle.effect  pixelate_voronoi.effect  render_output.effect  temporal_blur.effect  test.effect
src/: kernel.c  kernel.h  obs-composite-blur-filter.c  obs-composite-blur-filter.h  obs-composite-blur-plugin.c  obs-utils.c  obs-utils.h  version.h
src/blur/: box.c  box.h  dual_kawase.c  dual_kawase.h  gaussian-kernel.c  gaussian-kernel.h  gaussian.c  gaussian.h  pixelate.c  pixelate.h  temporal.c  temporal.h
